fix: pre overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,6 +58,7 @@ li, pre {
 }
 
 pre {
+  overflow-x: auto;
   background: #0d1117;
   padding: 1rem;
 }
